// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Conditional Rendering If 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        Using "if" on any field. Defaults to truthy check on the value (on length if the value is an array)
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <!---->
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="custom-control custom-checkbox"
        >
          <input
            autocomplete="off"
            class="custom-control-input"
            name="had_breakfast"
            type="checkbox"
            value="true"
          />
          <label
            class="custom-control-label"
          >
            Have you eaten your breakfast?
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Conditional Rendering Select With Dynamic Options 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        Using "optionsMap"
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Food
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <select
          class="custom-select text-muted"
          name="food"
        >
          <option
            value=""
          >
            -- Choose a food --
          </option>
          <option
            value="Rice"
          >
            Rice
          </option>
          <option
            value="Noodle"
          >
            Noodle
          </option>
        </select>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Sauce
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <select
          class="custom-select text-muted"
          name="sauce"
        >
          <option
            value=""
          >
            -- Choose a sauce after choosing your food --
          </option>
        </select>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <small
          class="form-text text-muted"
          tabindex="-1"
        >
          The options will change depending on the selection of food
        </small>
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Checkbox 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-checkbox
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <!---->
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="custom-control custom-checkbox"
        >
          <input
            autocomplete="off"
            class="custom-control-input"
            name="like_fruits"
            type="checkbox"
            value="true"
          />
          <label
            class="custom-control-label"
          >
            I like fruits
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <!---->
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="custom-control custom-checkbox"
        >
          <input
            autocomplete="off"
            class="custom-control-input"
            name="online_purchase"
            type="checkbox"
            value="yes"
          />
          <label
            class="custom-control-label"
          >
            I shop for fruits online
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        My favorite fruits
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="bv-no-focus-ring"
          role="group"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="fruits"
              type="checkbox"
              value="Apple"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Apple
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="fruits"
              type="checkbox"
              value="Banana"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Banana
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="fruits"
              type="checkbox"
              value="Cherry"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Cherry
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="fruits"
              type="checkbox"
              value="Durian"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Durian
              </span>
            </label>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        I eat fruits during
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="bv-no-focus-ring"
          role="group"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="eat_frequency"
              type="checkbox"
              value="breakfast"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Breakfast
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="eat_frequency"
              type="checkbox"
              value="lunch"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Lunch
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="eat_frequency"
              type="checkbox"
              value="dinner"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Dinner
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="eat_frequency"
              type="checkbox"
              value="supper"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Supper
              </span>
            </label>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Datepicker 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-datepicker
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Appointment date
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="b-form-btn-label-control dropdown b-form-datepicker form-control d-flex h-auto align-items-stretch"
          dir="ltr"
          role="group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            class="btn h-auto"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar"
              class="bi-calendar b-icon bi"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"
                  fill-rule="evenodd"
                />
                <path
                  d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </button>
          <input
            name="appointment_date"
            type="hidden"
            value=""
          />
          <div
            aria-modal="false"
            class="dropdown-menu"
            role="dialog"
            tabindex="-1"
          >
            <!---->
          </div>
          <label
            class="form-control text-break text-wrap bg-transparent h-auto text-muted"
          >
            No date selected
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Input 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-input
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          placeholder="Enter name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <small
          class="form-text text-muted"
          tabindex="-1"
        >
          This is the default type if unspecified
        </small>
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Age
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="age"
          type="number"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <small
          class="form-text text-muted"
          tabindex="-1"
        >
          Convert value to native number
        </small>
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Radio 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-radio
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Gender
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="bv-no-focus-ring"
          role="radiogroup"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-radio"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="gender"
              type="radio"
              value="Male"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Male
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-radio"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="gender"
              type="radio"
              value="Female"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Female
              </span>
            </label>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Do you drink alcohol?
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="bv-no-focus-ring"
          role="radiogroup"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-radio"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="drink"
              type="radio"
              value="true"
            />
            <label
              class="custom-control-label"
            >
              <span>
                Yes
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-control-inline custom-radio"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="drink"
              type="radio"
              value="false"
            />
            <label
              class="custom-control-label"
            >
              <span>
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Rating 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-rating
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Awesomeness
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <output
          aria-live="off"
          aria-valuemax="5"
          aria-valuemin="1"
          aria-valuenow="4"
          class="b-rating form-control align-items-center d-flex"
          dir="ltr"
          role="slider"
          tabindex="0"
        >
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <input
            name="awesomeness"
            type="hidden"
            value="4"
          />
        </output>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Overall
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <output
          aria-live="off"
          aria-valuemax="10"
          aria-valuemin="1"
          aria-valuenow="5"
          class="b-rating form-control align-items-center d-flex"
          dir="ltr"
          role="slider"
          tabindex="0"
        >
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-full"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star fill"
                class="bi-star-fill b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="b-rating-star flex-grow-1 b-rating-star-empty"
            tabindex="-1"
          >
            <span
              class="b-rating-icon"
            >
              <svg
                aria-label="star"
                class="bi-star b-icon bi text-warning"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.523-3.356c.329-.314.158-.888-.283-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767l-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288l1.847-3.658 1.846 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.564.564 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </span>
          <input
            name="overall"
            type="hidden"
            value="5"
          />
        </output>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Select 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-select
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Food
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <select
          class="custom-select text-muted"
          name="food"
        >
          <option
            value=""
          >
            -- Choose a food --
          </option>
          <option
            value="Rice"
          >
            Rice
          </option>
          <option
            value="Noodle"
          >
            Noodle
          </option>
          <option
            value="Meat"
          >
            Meat
          </option>
          <option
            value="Vegetable"
          >
            Vegetable
          </option>
          <option
            value="Fruit"
          >
            Fruit
          </option>
        </select>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Drink
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <select
          class="custom-select"
          name="drink"
        >
          <option
            value="coke"
          >
            Coke
          </option>
          <option
            value="juice"
          >
            Juice
          </option>
          <option
            value="coffee"
          >
            Coffee
          </option>
        </select>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Spinbutton 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-spinbutton
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Roll a number
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="b-form-spinbutton form-control d-flex align-items-stretch"
          lang="en-US"
          role="group"
          tabindex="-1"
        >
          <button
            aria-keyshortcuts="ArrowDown"
            aria-label="Decrement"
            class="btn btn-sm border-0 rounded-0 py-0"
            tabindex="-1"
            type="button"
          >
            <div>
              <svg
                aria-hidden="true"
                aria-label="dash"
                class="bi-dash b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(8 8) scale(1.25 1.25) translate(-8 -8)"
                >
                  <path
                    d="M3.5 8a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.5-.5z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </div>
          </button>
          <input
            name="number"
            type="hidden"
            value="8"
          />
          <output
            aria-live="off"
            aria-valuemax="100"
            aria-valuemin="1"
            aria-valuenow="8"
            aria-valuetext="8"
            class="flex-grow-1 align-self-center border-left border-right"
            dir="ltr"
            role="spinbutton"
            tabindex="0"
          >
            <bdi>
              8
            </bdi>
          </output>
          <button
            aria-keyshortcuts="ArrowUp"
            aria-label="Increment"
            class="btn btn-sm border-0 rounded-0 py-0"
            tabindex="-1"
            type="button"
          >
            <div>
              <svg
                aria-hidden="true"
                aria-label="plus"
                class="bi-plus b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(8 8) scale(1.25 1.25) translate(-8 -8)"
                >
                  <path
                    d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Tags 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-tags
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Javascript frameworks
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="b-form-tags form-control h-auto"
          role="group"
          tabindex="-1"
        >
          <output
            aria-atomic="true"
            aria-live="off"
            aria-relevant="additions text"
            class="sr-only"
            role="status"
          >
            Vue
          </output>
          <div
            aria-atomic="true"
            aria-live="off"
            class="sr-only"
            role="status"
          >
            
          </div>
          <ul
            class="b-form-tags-list list-unstyled mb-0 d-flex flex-wrap align-items-center"
          >
            <li
              class="badge b-form-tag d-inline-flex align-items-baseline mw-100 badge-secondary"
              title="Vue"
            >
              <span
                class="b-form-tag-content flex-grow-1 text-truncate"
              >
                Vue
              </span>
              <button
                aria-keyshortcuts="Delete"
                aria-label="Remove tag"
                class="close b-form-tag-remove"
                type="button"
              >
                ×
              </button>
            </li>
            <li
              aria-live="off"
              class="flex-grow-1"
              role="none"
            >
              <div
                class="d-flex"
                role="group"
              >
                <input
                  class="b-form-tags-input w-100 flex-grow-1 p-0 m-0 bg-transparent border-0"
                  placeholder="Add another..."
                  style="outline: 0; min-width: 5rem;"
                  type="text"
                  value=""
                />
                <button
                  class="btn b-form-tags-button py-0 btn-outline-secondary disabled invisible"
                  disabled="disabled"
                  style="font-size: 90%;"
                  type="button"
                >
                  Add
                </button>
              </div>
            </li>
          </ul>
          <div
            aria-atomic="true"
            aria-live="polite"
          >
            <!---->
            <!---->
          </div>
          <input
            name="frameworks"
            type="hidden"
            value="Vue"
          />
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Textarea 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-textarea
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Address
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <textarea
          class="form-control"
          name="address"
          rows="3"
          wrap="soft"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Fields Timepicker 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/form-timepicker
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Appointment time
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <div
          class="b-form-btn-label-control dropdown b-form-timepicker form-control d-flex h-auto align-items-stretch"
          dir="ltr"
          role="group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            class="btn h-auto"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="clock"
              class="bi-clock b-icon bi"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"
                  fill-rule="evenodd"
                />
                <path
                  d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </button>
          <input
            name="appointment_time"
            type="hidden"
            value=""
          />
          <div
            aria-modal="false"
            class="dropdown-menu"
            role="dialog"
            tabindex="-1"
          >
            <!---->
          </div>
          <label
            class="form-control text-break text-wrap bg-transparent h-auto text-muted"
          >
            No time selected
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Divider 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header />
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <hr />
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Footer 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header />
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-outline-primary"
        type="submit"
      >
        Next
      </button>
      <button
        class="btn btn-outline-secondary ml-2"
        type="reset"
      >
        Try reset
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Group Description 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header />
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <small
          class="form-text text-muted"
          tabindex="-1"
        >
          Describe something here
        </small>
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Group Label 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header />
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Full name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Header 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <h1>
        Best Pizza Restaurant
      </h1>
      <p
        class="text-muted"
      >
        Customize according to your taste
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Form Slots 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <h4
        style="color: red;"
      >
        Title is rendered within the header slot
      </h4>
       
      <p>
        <em>
          Description as well
        </em>
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          class="form-control"
          name="name"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        type="submit"
      >
        Custom submit
      </button>
       
      <button
        type="reset"
      >
        Custom reset
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Layout Auto Grid 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        Using a grid will auto-contruct the necessary container (fluid), form-row, and cols (with "sm" breakpoint)
      </p>
    </header>
    <div
      class="container-fluid px-0"
    >
      <div
        class="form-row"
      >
        <div
          class="col-sm"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Name
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <input
                class="form-control"
                name="name"
                type="text"
              />
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
        <div
          class="col-sm"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Birthday
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <div
                class="b-form-btn-label-control dropdown b-form-datepicker form-control d-flex h-auto align-items-stretch"
                dir="ltr"
                role="group"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="btn h-auto"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="calendar"
                    class="bi-calendar b-icon bi"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"
                        fill-rule="evenodd"
                      />
                    </g>
                  </svg>
                </button>
                <input
                  name="birthday"
                  type="hidden"
                  value=""
                />
                <div
                  aria-modal="false"
                  class="dropdown-menu"
                  role="dialog"
                  tabindex="-1"
                >
                  <!---->
                </div>
                <label
                  class="form-control text-break text-wrap bg-transparent h-auto text-muted"
                >
                  No date selected
                </label>
              </div>
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
        <div
          class="col-sm"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Age
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <input
                class="form-control"
                name="age"
                type="number"
              />
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
      </div>
    </div>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Layout Manual 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        https://bootstrap-vue.org/docs/components/layout
      </p>
    </header>
    <div
      class="container-fluid px-0"
    >
      <div
        class="row"
      >
        <div
          class="col-sm"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Name
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <input
                class="form-control"
                name="name"
                type="text"
              />
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
        <div
          class="col-sm"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Nickname
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <input
                class="form-control"
                name="nickname"
                type="text"
              />
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="col-sm-8"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Birthday
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <div
                class="b-form-btn-label-control dropdown b-form-datepicker form-control d-flex h-auto align-items-stretch"
                dir="ltr"
                role="group"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="btn h-auto"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="calendar"
                    class="bi-calendar b-icon bi"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"
                        fill-rule="evenodd"
                      />
                    </g>
                  </svg>
                </button>
                <input
                  name="birthday"
                  type="hidden"
                  value=""
                />
                <div
                  aria-modal="false"
                  class="dropdown-menu"
                  role="dialog"
                  tabindex="-1"
                >
                  <!---->
                </div>
                <label
                  class="form-control text-break text-wrap bg-transparent h-auto text-muted"
                >
                  No date selected
                </label>
              </div>
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
        <div
          class="col-sm-4"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              tabindex="-1"
            >
              Age
            </legend>
            <div
              class="bv-no-focus-ring"
              role="group"
              tabindex="-1"
            >
              <input
                class="form-control"
                name="age"
                type="number"
              />
              <div
                class="invalid-feedback"
              >
                
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
        </div>
      </div>
    </div>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Validations Custom Feedbacks 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        Click submit button to trigger form validations
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
        <span
          class="ml-1 text-danger"
        >
          *
        </span>
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          aria-required="true"
          class="form-control"
          name="name"
          required="required"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;

exports[`Storyshots Validations Required 1`] = `
<div
  style="padding: 2rem;"
>
  <form
    class=""
    novalidate="novalidate"
  >
    <header>
      <p
        class="text-muted"
      >
        Click submit button to trigger form validations
      </p>
    </header>
    <fieldset
      class="form-group"
    >
      <legend
        class="bv-no-focus-ring col-form-label pt-0"
        tabindex="-1"
      >
        Name
        <span
          class="ml-1 text-danger"
        >
          *
        </span>
      </legend>
      <div
        class="bv-no-focus-ring"
        role="group"
        tabindex="-1"
      >
        <input
          aria-required="true"
          class="form-control"
          name="name"
          required="required"
          type="text"
        />
        <div
          class="invalid-feedback"
        >
          
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </fieldset>
    <footer>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </footer>
  </form>
</div>
`;
